@startuml

title __ENTITIES's Class Diagram__\n

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      enum Availability {
        Attending
        NotAttending
        Maybe
        code
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class AvailabilityConverter {
          {static} + toAvailabilty()
          {static} + toInteger()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class DateConverter {
          {static} + fromTimestamp()
          {static} + dateToTimestamp()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class Event {
          - id : int
          - name : String
          - description : String
          - mainDateTime : Date
          - location : String
          - PicturePath : String
          - eventOwnerId : long
          + Event()
          + Event()
          + getName()
          + setName()
          + getMainDateTime()
          + setMainDateTime()
          + getLocation()
          + setLocation()
          + getId()
          + setId()
          + getPicturePath()
          + setPicturePath()
          + getDescription()
          + setDescription()
          + getEventOwnerId()
          + setEventOwnerId()
          + compareTo()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class EventDate {
          - id : int
          - eventId : long
          - eventDate : Date
          + EventDate()
          + EventDate()
          + getId()
          + setId()
          + getEventId()
          + setEventId()
          + getEventDate()
          + setEventDate()
          + compareTo()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class Friend {
          + id : int
          + userName : String
          + webServerId : String
          + Friend()
          + Friend()
          + getUserName()
          + getWebServerId()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class Group {
          + id : int
          + Name : String
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class User {
          + id : int
          - userName : String
          + phoneNumber : String
          + email : String
          + firstName : String
          + lastName : String
          + externalId : String
          + User()
          + getUserName()
          + setUserName()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class UserEvent {
          - id : int
          - userId : int
          - eventId : int
          - eventDate : Date
          + UserEvent()
          + getId()
          + setId()
          + getUserId()
          + setUserId()
          + getEventId()
          + setEventId()
          + getEventDate()
          + setEventDate()
          + getAvailability()
          + setAvailability()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.entities {
      class UserGroup {
          + userId : int
          + groupId : int
      }
    }
  }
  

  Event -up-|> Comparable
  EventDate -up-|> Comparable
  UserEvent o-- Availability : availability


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
